# rspc-nextjs

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
.cargo/: config.toml
apps/api/: Cargo.toml  package.json
apps/api/.cargo/: config.toml
apps/api/app/: Cargo.toml
apps/api/app/src/: main.rs  prisma.rs
apps/api/prisma/: .env  Cargo.toml  dev.db  schema.prisma
apps/api/src/: main.rs  prisma.rs  utils.rs
apps/api/src/routes/: files.rs  mod.rs  users.rs
apps/web/: package.json  tailwind.config.js
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/components/file-uploader/: file-uploader.module.css  file-uploader.tsx
apps/web/components/: Providers.tsx
apps/web/lib/: rspc.ts  rspc.tsx
apps/web/src/lib/: rspc.tsx
apps/web/src/utils/: bindings.ts
