[workspace]
resolver = "2"
members = ["apps/api/prisma", "apps/api"]
default-members = ["apps/api"]

[workspace.dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust.git", tag = "0.6.10", features = [
    "sqlite",
    "rspc",
    "migrations",
], default-features = false }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust.git", tag = "0.6.10", features = [
    "sqlite",
    "rspc",
    "migrations",
], default-features = false }
rspc = { version = "0.1.3", features = ["axum"] }

[workspace.metadata.pkg-config]
openssl = "0.0.3"
