[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.99"
serde = { version = "1.0.164", features = ["derive"] }
axum = "0.6.20"
rspc = { workspace = true }
tokio = { version = "1.35.1", features = ["full"] }
prisma-client-rust = { workspace = true }
dotenv = "0.15.0"
tower-http = { version = "0.3.5", features = ["cors"] }
specta = { version = "1.0.4", features = ["serde", "typescript"] }
svix = "1.5.2"
jsonwebtoken = "8.3.0"
rust-s3 = "0.34.0-rc3"
validator = { version = "0.16.1", features = ["derive"] }
regex = "1.10.2"
lazy_static = "1"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
